--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-gesture-password",
-  "version": "0.0.4",
-  "description": "A gesture password component for React Native",
+  "version": "0.1.0",
+  "description": "A gesture password component for React Native. It supports both iOS and Android since it's' written in pure JavaScript.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +14,7 @@
     "react-component",
     "react-native",
     "ios",
+    "android",
     "gesture password"
   ],
   "author": {
@@ -25,6 +26,6 @@
     "url": "https://github.com/spikef/react-native-gesture-password/issues"
   },
   "peerDependencies": {
-    "react-native": ">=0.7"
+    "react-native": ">=0.14"
   }
 }
