--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-native-gesture-password",
   "version": "0.1.1",
   "description": "A gesture password component for React Native. It supports both iOS and Android since it's' written in pure JavaScript.",
-  "main": "index.js",
+  "main": "source/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
