--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
     "url": "https://github.com/spikef/react-native-gesture-password/issues"
   },
   "peerDependencies": {
-    "react-native": ">=0.14"
+    "react-native": ">=0.14 || 0.17.0-rc || 0.18.0-rc || 0.19.0-rc || 0.20.0-rc"
   }
 }
