--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-gesture-password",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "A gesture password component for React Native. It supports both iOS and Android since it's' written in pure JavaScript.",
   "main": "source/index.js",
   "scripts": {
@@ -26,6 +26,6 @@
     "url": "https://github.com/spikef/react-native-gesture-password/issues"
   },
   "peerDependencies": {
-    "react-native": ">=0.14 || 0.17.0-rc || 0.18.0-rc || 0.19.0-rc || 0.20.0-rc"
+    "react-native": ">=0.14"
   }
 }
